# guess_the_language

./: README.md
include/: clear_console.h  languages.h  question.h  random_wrapper.h  service.h
src/: CMakeLists.txt  base64.cpp  clear_console.cpp  languages.cpp  main.cpp  random_wrapper.cpp  service.cpp
